Work on fixing layout bugs in grid
After adding the section header to the grid and
using span to get it across the columns, an issue
arises that causes the rest of the grid boxes to
not wrap to a new row.

--- a/style.css
+++ b/style.css
@@ -46,19 +46,39 @@ body {
 
 .about-me-image {
     background-color: red;
-    height: 300px;
-    width: 250px;
+    height: auto;
+}
+
+.my-work-section > .content-container {
+
+}
+
+.my-work-title {
+    grid-column: span 3;
+    margin: 0;
 }
 
 .projects-container {
     display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    gap: 20px;
+    max-width: 70%;
+    grid-template-columns: repeat(auto-fit, 200px);
+    justify-content: center;
+    margin: auto;
 }
 
 .project {
-    max-width: 200px;
     height: 250px;
-    width: 100%;
     background-color: pink;
+}
+
+
+
+
+
+
+@media (min-width: 1300px) {
+    .projects-container {
+        grid-template-columns: repeat(3, 200px);
+    }
 }
